[gd_scene load_steps=50 format=4 uid="uid://delaxhx1j17tb"]

[ext_resource type="TileSet" uid="uid://ibgnx2ymucbq" path="res://levels/tileset.tres" id="1_80vhd"]
[ext_resource type="Script" uid="uid://do2or4ovxyerg" path="res://levels/level.gd" id="1_gjl0y"]
[ext_resource type="PackedScene" uid="uid://dqaihh17n1f12" path="res://entities/camera/camera.tscn" id="2_hjsbj"]
[ext_resource type="PackedScene" uid="uid://c3fqkueu71rf2" path="res://entities/door/door.tscn" id="2_safpt"]
[ext_resource type="PackedScene" uid="uid://ber2ukf0x5uaw" path="res://entities/parallax/parallax.tscn" id="2_vnv7o"]
[ext_resource type="PackedScene" uid="uid://bk48wlfkg1p11" path="res://entities/button/button.tscn" id="3_gjl0y"]
[ext_resource type="PackedScene" uid="uid://biotlhx7rd3hp" path="res://entities/orb/orb.tscn" id="4_vnv7o"]
[ext_resource type="Shader" uid="uid://c4kghet2pushk" path="res://levels/cutout.gdshader" id="8_d5x7l"]
[ext_resource type="Texture2D" uid="uid://dvwe6yyf0dldh" path="res://levels/levels.png" id="8_mxp4k"]
[ext_resource type="Shader" uid="uid://b1geqjqhk6fmn" path="res://entities/rotsprite.gdshader" id="9_ukwr8"]
[ext_resource type="Texture2D" uid="uid://cndbn1jeog6o1" path="res://levels/loop.png" id="10_pb8y7"]
[ext_resource type="Script" uid="uid://dej1251bfh2gd" path="res://levels/dialogs.gd" id="10_ukwr8"]
[ext_resource type="FontFile" uid="uid://cbptoha0rsyl" path="res://levels/unifont.ttf" id="11_pb8y7"]
[ext_resource type="Texture2D" uid="uid://h23juck7fdud" path="res://levels/dialogue.png" id="13_0qmeg"]
[ext_resource type="Texture2D" uid="uid://ce87nkgmd0um4" path="res://levels/transition.png" id="14_d7v53"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hjsbj"]
size = Vector2(96, 96)

[sub_resource type="Environment" id="Environment_vnv7o"]
background_mode = 3

[sub_resource type="AtlasTexture" id="AtlasTexture_0qmeg"]
atlas = ExtResource("8_mxp4k")
region = Rect2(0, 0, 56, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_ta7ci"]
atlas = ExtResource("8_mxp4k")
region = Rect2(56, 0, 56, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_lh335"]
atlas = ExtResource("8_mxp4k")
region = Rect2(112, 0, 56, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6cys"]
atlas = ExtResource("8_mxp4k")
region = Rect2(168, 0, 56, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_368ro"]
atlas = ExtResource("8_mxp4k")
region = Rect2(224, 0, 56, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ca7f"]
atlas = ExtResource("8_mxp4k")
region = Rect2(280, 0, 56, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_kogck"]
atlas = ExtResource("8_mxp4k")
region = Rect2(336, 0, 56, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_574oa"]
atlas = ExtResource("8_mxp4k")
region = Rect2(392, 0, 56, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn76l"]
atlas = ExtResource("8_mxp4k")
region = Rect2(448, 0, 56, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_werwd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qmeg")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ta7ci")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lh335")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6cys")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_368ro")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ca7f")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kogck")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_574oa")
}],
"loop": true,
"name": &"7",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn76l")
}],
"loop": true,
"name": &"8",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_mxp4k"]
atlas = ExtResource("10_pb8y7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7v53"]
atlas = ExtResource("10_pb8y7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0qmeg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxp4k")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7v53")
}],
"loop": true,
"name": &"pressed",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ta7ci"]
size = Vector2(32, 20)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hy0rb"]
shader = ExtResource("9_ukwr8")
shader_parameter/pixel_scale = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rtcij"]
shader = ExtResource("8_d5x7l")
shader_parameter/top_left = Vector2(20, 20)
shader_parameter/bottom_right = Vector2(460, 250)
shader_parameter/rounded = 14.0
shader_parameter/offset = Vector2(0, 0)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_d5x7l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dcgl2"]
atlas = ExtResource("14_d7v53")
region = Rect2(0, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_pm7mp"]
atlas = ExtResource("14_d7v53")
region = Rect2(480, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgadm"]
atlas = ExtResource("14_d7v53")
region = Rect2(960, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_humu5"]
atlas = ExtResource("14_d7v53")
region = Rect2(1440, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddeq6"]
atlas = ExtResource("14_d7v53")
region = Rect2(1920, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4k87"]
atlas = ExtResource("14_d7v53")
region = Rect2(2400, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_ia6v6"]
atlas = ExtResource("14_d7v53")
region = Rect2(2880, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_werwd"]
atlas = ExtResource("14_d7v53")
region = Rect2(2880, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_of21v"]
atlas = ExtResource("14_d7v53")
region = Rect2(2400, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_80cyg"]
atlas = ExtResource("14_d7v53")
region = Rect2(1920, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_mca5t"]
atlas = ExtResource("14_d7v53")
region = Rect2(1440, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_axqo2"]
atlas = ExtResource("14_d7v53")
region = Rect2(960, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_8henu"]
atlas = ExtResource("14_d7v53")
region = Rect2(480, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_rm7tw"]
atlas = ExtResource("14_d7v53")
region = Rect2(0, 0, 480, 270)

[sub_resource type="SpriteFrames" id="SpriteFrames_dcgl2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcgl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pm7mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgadm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_humu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddeq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4k87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ia6v6")
}],
"loop": false,
"name": &"close",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_werwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_of21v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80cyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mca5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axqo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8henu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rm7tw")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"open",
"speed": 18.0
}]

[node name="Level2" type="Node2D"]
script = ExtResource("1_gjl0y")

[node name="Parallax" type="CanvasLayer" parent="."]
layer = -10

[node name="Parallax" parent="Parallax" instance=ExtResource("2_vnv7o")]
material = null
metadata/_edit_lock_ = true

[node name="Background" type="TileMapLayer" parent="."]
z_index = -9
tile_set = ExtResource("1_80vhd")
collision_enabled = false
metadata/_edit_lock_ = true

[node name="BackgroundOver" type="TileMapLayer" parent="."]
z_index = -9
tile_set = ExtResource("1_80vhd")
collision_enabled = false
metadata/_edit_lock_ = true

[node name="Objects" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="ExitDoor" parent="Objects" instance=ExtResource("2_safpt")]
position = Vector2(471, 64)

[node name="Button" parent="Objects" node_paths=PackedStringArray("door") instance=ExtResource("3_gjl0y")]
position = Vector2(240, 248)
door = NodePath("../ExitDoor")

[node name="Orb" parent="Objects" instance=ExtResource("4_vnv7o")]
position = Vector2(240, 144)
freeze = true

[node name="Map" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABABAAAgAWAAUAAAACABAAAgAWAAUAAAADABAAAgAWAAUAAAAEABAAAgAWAAUAAAAFABAAAgAWAAUAAAAGABAAAgAWAAUAAAAHABAAAgAWAAUAAAAIABAAAgAWAAUAAAAJABAAAgAWAAUAAAAKABAAAgAWAAUAAAALABAAAgAWAAUAAAAMABAAAgAWAAUAAAANABAAAgAWAAUAAAAOABAAAgAWAAUAAAAPABAAAgAWAAUAAAAQABAAAgAWAAUAAAARABAAAgAWAAUAAAASABAAAgAWAAUAAAATABAAAgAWAAUAAAAUABAAAgAWAAUAAAAVABAAAgAWAAUAAAAWABAAAgAWAAUAAAAXABAAAgAWAAUAAAAYABAAAgAWAAUAAAAZABAAAgAWAAUAAAAaABAAAgAWAAUAAAAbABAAAgAWAAUAAAAcABAAAgAWAAUAAAAAAAkAAgAXAAcAAAAAAAgAAgAXAAYAAAAAAAcAAgAXAAYAAAAAAAYAAgAXAAYAAAAAAAUAAgAXAAYAAAAAAAQAAgAXAAYAAAAAAAMAAgAXAAYAAAAAAAIAAgAXAAYAAAAAAAEAAgAXAAYAAAABAAAAAgAWAAcAAAACAAAAAgAWAAcAAAADAAAAAgAWAAcAAAAEAAAAAgAWAAcAAAAFAAAAAgAWAAcAAAAGAAAAAgAWAAcAAAAHAAAAAgAWAAcAAAAIAAAAAgAWAAcAAAAJAAAAAgAWAAcAAAAdAA8AAgAVAAYAAAAdAA4AAgAVAAYAAAAdAA0AAgAVAAYAAAAdAAwAAgAVAAYAAAAdAAsAAgAVAAYAAAAdAAoAAgAVAAYAAAAdAAkAAgAVAAYAAAAdAAgAAgAVAAYAAAAdAAcAAgAVAAUAAAAdAAAAAgAWAAcAAAAKAAAAAgAbAAUAAAALAAAAAgAbAAUAAAAMAAAAAgAbAAUAAAANAAAAAgAbAAUAAAAOAAAAAgAbAAUAAAAPAAAAAgAbAAUAAAAQAAAAAgAbAAUAAAARAAAAAgAbAAUAAAASAAAAAgAbAAUAAAATAAAAAgAbAAUAAAAUAAAAAgAbAAUAAAAVAAAAAgAbAAUAAAAWAAAAAgAbAAUAAAAXAAAAAgAbAAUAAAAYAAAAAgAbAAUAAAAZAAAAAgAbAAUAAAAaAAAAAgAbAAUAAAAbAAAAAgAbAAUAAAAcAAAAAgAbAAUAAAAdABAAAgAcAAcAAAAAAAAAAgAaAAUAAAAAABAAAgAbAAcAAAABAAIAAgAQAAEAAAABAAMAAgAQAAEAAAABAAQAAgAQAAEAAAABAAUAAgAQAAEAAAABAAYAAgAQAAEAAAABAAcAAgAQAAEAAAABAAgAAgAQAAEAAAA=")
tile_set = ExtResource("1_80vhd")
metadata/_edit_lock_ = true

[node name="EntranceDoor" parent="." instance=ExtResource("2_safpt")]
position = Vector2(9, 208)

[node name="Timer" type="Timer" parent="EntranceDoor"]
wait_time = 3.0
one_shot = true

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(-52, 210)

[node name="Timer" type="Timer" parent="PlayerSpawn"]
one_shot = true

[node name="Camera" parent="PlayerSpawn" instance=ExtResource("2_hjsbj")]
metadata/_edit_lock_ = true

[node name="Velocity" type="Marker2D" parent="PlayerSpawn"]
position = Vector2(142, 0)

[node name="FinishArea" type="Area2D" parent="."]
position = Vector2(528, 64)

[node name="CollisionShape" type="CollisionShape2D" parent="FinishArea"]
shape = SubResource("RectangleShape2D_hjsbj")
debug_color = Color(0.680476, 1, 0.652914, 0.419608)
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="CanvasLayer"]
environment = SubResource("Environment_vnv7o")

[node name="LevelIndicator" type="AnimatedSprite2D" parent="CanvasLayer"]
position = Vector2(439, 23)
sprite_frames = SubResource("SpriteFrames_werwd")
animation = &"8"
autoplay = "0"
metadata/_edit_lock_ = true

[node name="LupinCounter" type="Label" parent="CanvasLayer"]
offset_left = 48.0
offset_top = 14.0
offset_right = 405.0
offset_bottom = 37.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.662745)
theme_override_fonts/font = ExtResource("11_pb8y7")
theme_override_font_sizes/font_size = 16
text = "Lupin #..."
horizontal_alignment = 2

[node name="LoopButton" type="Area2D" parent="CanvasLayer"]
position = Vector2(29, 23)
metadata/_edit_lock_ = true

[node name="Sprite" type="AnimatedSprite2D" parent="CanvasLayer/LoopButton"]
sprite_frames = SubResource("SpriteFrames_0qmeg")
metadata/_edit_lock_ = true

[node name="CollisionShape" type="CollisionShape2D" parent="CanvasLayer/LoopButton"]
shape = SubResource("RectangleShape2D_ta7ci")
metadata/_edit_lock_ = true

[node name="Dialogs" type="Node2D" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_hy0rb")
position = Vector2(0, 270)
script = ExtResource("10_ukwr8")
metadata/_edit_lock_ = true

[node name="DialogA" type="MarginContainer" parent="CanvasLayer/Dialogs"]
visible = false
offset_left = 13.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = -13.0
metadata/_edit_lock_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/Dialogs/DialogA"]
modulate = Color(0.75, 0.995833, 1, 0.752941)
layout_mode = 2
texture = ExtResource("13_0qmeg")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Dialogs/DialogA"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="CanvasLayer/Dialogs/DialogA/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.501407, 0.501406, 0.501406, 1)
theme_override_fonts/font = ExtResource("11_pb8y7")
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="DialogB" type="MarginContainer" parent="CanvasLayer/Dialogs"]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 432.0
offset_top = -45.0
offset_right = 464.0
offset_bottom = -13.0
grow_horizontal = 0
grow_vertical = 0
metadata/_edit_lock_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/Dialogs/DialogB"]
modulate = Color(1, 0.8, 0.8, 0.752941)
layout_mode = 2
texture = ExtResource("13_0qmeg")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Dialogs/DialogB"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="CanvasLayer/Dialogs/DialogB/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_fonts/font = ExtResource("11_pb8y7")
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="LetterTimer" type="Timer" parent="CanvasLayer/Dialogs"]
wait_time = 0.035
one_shot = true

[node name="LetterRetractTimer" type="Timer" parent="CanvasLayer/Dialogs"]
wait_time = 0.025
one_shot = true

[node name="DialogRetractTimer" type="Timer" parent="CanvasLayer/Dialogs"]
one_shot = true

[node name="Cutout" type="Polygon2D" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_rtcij")
color = Color(0, 0, 0, 1)
texture = SubResource("PlaceholderTexture2D_d5x7l")
polygon = PackedVector2Array(0, 0, 480, 0, 480, 270, 0, 270)
metadata/_edit_lock_ = true

[node name="Transition" type="AnimatedSprite2D" parent="CanvasLayer"]
position = Vector2(240, 135)
sprite_frames = SubResource("SpriteFrames_dcgl2")
animation = &"open"
autoplay = "open"
frame = 7
frame_progress = 1.0
metadata/_edit_lock_ = true

[connection signal="timeout" from="EntranceDoor/Timer" to="." method="_on_entrance_timeout"]
[connection signal="timeout" from="PlayerSpawn/Timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="body_entered" from="FinishArea" to="." method="_on_finish_area_entered"]
[connection signal="input_event" from="CanvasLayer/LoopButton" to="." method="_on_loop_button_input_event"]
[connection signal="timeout" from="CanvasLayer/Dialogs/LetterTimer" to="CanvasLayer/Dialogs" method="_on_letter_timer_timeout"]
[connection signal="timeout" from="CanvasLayer/Dialogs/LetterRetractTimer" to="CanvasLayer/Dialogs" method="_on_letter_retract_timer_timeout"]
[connection signal="timeout" from="CanvasLayer/Dialogs/DialogRetractTimer" to="CanvasLayer/Dialogs" method="_on_dialog_retract_timer_timeout"]
[connection signal="animation_finished" from="CanvasLayer/Transition" to="." method="_on_transition_animation_finished"]
